# chat_app

./: README.md
server/: Cargo.toml  Dockerfile
server/migrations/2020-10-26-235759_create_users/: up.sql
server/migrations/2020-10-27-090512_create_messages/: up.sql
server/src/: conversation.rs  lib.rs  main.rs  message.rs  routes.rs  schema.rs  store.rs
server/src/user/: mod.rs  protouser.rs
server/tests/: integration.rs
